# trezoakora

./: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  justfile  openapi.json  redis.conf  signers.example.toml  trezoakora.toml
.github/actions/cleanup-test-env/: action.yml
.github/actions/run-test-runner/: action.yml
.github/actions/setup-solana/: action.yml
.github/actions/show-failure-logs/: action.yml
.github/workflows/: build-rust.yml  rust-publish.yml  rust-unit.yml  rust.yml  ts-sdk-publish-manual.yml  ts-sdk-publish.yml  typescript-integration.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs
crates/lib/: Cargo.toml
crates/lib/src/: cache.rs  config.rs  constant.rs  error.rs  mod.rs  rpc.rs  state.rs
crates/lib/src/admin/: token_util.rs
crates/lib/src/fee/: fee.rs  price.rs
crates/lib/src/metrics/: README.md  balance.rs  docker-compose.metrics.yml  middleware.rs  mod.rs  prometheus.yml
crates/lib/src/oracle/: jupiter.rs  oracle.rs  utils.rs
crates/lib/src/rpc_server/: args.rs  middleware_utils.rs  rpc.rs  server.rs
examples/: README.md
examples/deploy/: Dockerfile  signers.toml  trezoakora.toml
examples/getting-started/: README.md
examples/x402/demo/: .env.example  README.md  package.json
sdks/: package.json  pnpm-lock.yaml
sdks/.changeset/: brave-melons-stand.md  chatty-tigers-battle.md  config.json  quick-animals-attack.md  rare-ends-hug.md  salty-pants-end.md  spicy-lines-slide.md
sdks/ts/: .prettierrc.json  README.md  package.json  pnpm-lock.yaml  typedoc.html.json  typedoc.json
sdks/ts/docs/: README.md
sdks/ts/examples/: basic-usage.ts
sdks/ts/scripts/: add-toc.js  generate-api-docs.js  test-with-validator.js
sdks/ts/src/: client.ts  index.ts
sdks/ts/test/: auth-setup.ts  integration.test.ts  setup.ts  unit.test.ts
tests/: Cargo.toml
tests/adversarial/: fee_payer_exploitation.rs  main.rs  program_validation.rs  token_states.rs
tests/auth/: api_key_auth.rs  hmac_auth.rs  main.rs
tests/fee_payer_policy/: fee_payer_policy_violations.rs  main.rs
tests/free_signing/: free_signing_tests.rs
tests/multi_signer/: main.rs  signer_management.rs
tests/payment_address/: main.rs  payment_address_legacy_tests.rs  payment_address_multi_payment_tests.rs  payment_address_v0_lut_tests.rs  payment_address_v0_tests.rs
tests/rpc/: basic_endpoints.rs  compute_budget.rs  fee_estimation.rs  main.rs  transaction_signing.rs  transfers.rs
tests/src/common/: assertions.rs  auth_helpers.rs  client.rs  constants.rs  extension_helpers.rs  helpers.rs  lookup_tables.rs  setup.rs  transaction.rs
tests/src/common/fixtures/: auth-test.toml  fee-payer-policy-test.toml  paymaster-address-test.toml  signers-multi.toml  signers.toml  trezoakora-free-test.toml  trezoakora-test.toml
tests/src/common/transfer-hook-example/: Cargo.toml
tests/src/common/transfer-hook-example/src/: lib.rs
tests/src/test_runner/: accounts.rs  commands.rs  mod.rs  test_cases.toml  trezoakora.rs  validator.rs
tests/tokens/: main.rs  token_2022_extensions_test.rs  token_2022_test.rs
(+65 files in other folders)
