[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"


[[test]]
name = "rpc"
path = "rpc/main.rs"

[[test]]
name = "tokens"
path = "tokens/main.rs"

[[test]]
name = "auth"
path = "auth/main.rs"

[[test]]
name = "adversarial"
path = "adversarial/main.rs"

[[test]]
name = "fee_payer_policy"
path = "fee_payer_policy/main.rs"

[[test]]
name = "multi_signer"
path = "multi_signer/main.rs"

[[test]]
name = "external"
path = "external/main.rs"

[[test]]
name = "payment_address"
path = "payment_address/main.rs"

[[test]]
name = "free_signing"
path = "free_signing/main.rs"

[dependencies]
trezoakora-lib = { path = "../crates/lib" }
trezoa-sdk = { workspace = true }
trezoa-commitment-config = { workspace = true }
trezoa-program-pack = { workspace = true }
trezoa-compute-budget-interface = { workspace = true }
trezoa-message = { workspace = true }
trezoa-system-interface = { workspace = true }
trezoa-client = { workspace = true }
tpl-token-interface = { workspace = true }
tpl-token-2022-interface = { workspace = true }
tpl-associated-token-account-interface = { workspace = true }
tpl-transfer-hook-interface = { version = "2.0.0" }
bincode = { workspace = true }
bs58 = { workspace = true }
dotenv = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
once_cell = "1.21.3"
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
trezoa-address-lookup-table-interface = { workspace = true }
colored = "3.0"
serde = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
