[package]
name = "trezoakora-cli"
version = "2.0.1"
edition = "2021"
description = "CLI for TrezoaKora gasless relayer"
license = "MIT"
readme = "../../README.md"

[[bin]]
name = "trezoakora"
path = "src/main.rs"

[features]
docs = ["trezoakora-lib/docs", "dep:utoipa"]

[dependencies]
trezoakora-lib = { path = "../lib", version = "2.0.1" }
clap = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
trezoa-client = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
