[workspace]

[package]
name = "transfer-hook-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook_example"

[features]
no-entrypoint = []
default = []

[dependencies]
trezoa-program = "1.18"
tpl-transfer-hook-interface = "0.6"
tpl-tlv-account-resolution = "0.6"
tpl-type-length-value = "0.4"
